--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "autosuggest-highlight": "3.3.4",
         "axios": "0.27.2",
         "axios-mock-adapter": "1.21.2",
+        "bootstrap": "^5.3.1",
         "clsx": "1.2.1",
         "core-js": "3.24.1",
         "crypto-js": "4.1.1",
@@ -33,6 +34,7 @@
         "date-fns-jalali": "2.21.3-1",
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
+        "formik": "^2.4.3",
         "framer-motion": "7.2.0",
         "google-map-react": "2.2.0",
         "history": "5.3.0",
@@ -55,6 +57,7 @@
         "react-apexcharts": "1.4.0",
         "react-autosuggest": "10.1.0",
         "react-beautiful-dnd": "13.1.0",
+        "react-bootstrap": "^2.8.0",
         "react-dom": "18.2.0",
         "react-draft-wysiwyg": "1.15.0",
         "react-draggable": "4.4.5",
