--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "date-fns-jalali": "2.21.3-1",
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
+        "expo-linear-gradient": "^12.3.0",
         "formik": "^2.4.3",
         "framer-motion": "7.2.0",
         "google-map-react": "2.2.0",
