--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-autosuggest": "10.1.0",
         "react-beautiful-dnd": "13.1.0",
         "react-bootstrap": "^2.8.0",
+        "react-confirm-alert": "^3.0.6",
         "react-dom": "18.2.0",
         "react-draft-wysiwyg": "1.15.0",
         "react-draggable": "4.4.5",
@@ -75,6 +76,7 @@
         "react-swipeable-views": "0.14.0",
         "react-swipeable-views-utils": "0.14.0",
         "react-table": "7.8.0",
+        "react-toastify": "^9.1.3",
         "react-transition-group": "4.4.5",
         "react-virtualized": "9.22.3",
         "react-window": "1.8.7",
@@ -159,5 +161,4 @@
             "last 3 safari version"
         ]
     }
-
 }
