--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
         "expo-linear-gradient": "^12.3.0",
-        "formik": "^2.4.3",
         "framer-motion": "7.2.0",
         "google-map-react": "2.2.0",
         "history": "5.3.0",
@@ -69,6 +68,7 @@
         "react-masonry-css": "1.0.16",
         "react-number-format": "4.9.3",
         "react-popper": "2.3.0",
+        "react-query": "^3.39.3",
         "react-redux": "8.0.2",
         "react-router-dom": "6.3.0",
         "react-spring": "8.0.27",
@@ -111,6 +111,7 @@
         "@typescript-eslint/eslint-plugin": "^4.33.0",
         "@typescript-eslint/parser": "^4.33.0",
         "autoprefixer": "9.8.8",
+        "concurrently": "^8.2.1",
         "cross-env": "7.0.3",
         "eslint": "7.32.0",
         "eslint-config-airbnb": "^18.2.1",
