fixed some backend issues

--- a/package.json
+++ b/package.json
@@ -138,7 +138,9 @@
         "util": "^0.12.4"
     },
     "scripts": {
-        "start": "react-app-rewired  start",
+        "start": "concurrently \"npm run server\" \"npm run client\"",
+        "server": "cd apache-tomcat-10.1.11/bin && startup.bat",
+        "client": "react-app-rewired  start",
         "build": "cross-env GENERATE_SOURCEMAP=false react-app-rewired build",
         "test": "react-app-rewired test --env=node",
         "eject": "react-app-rewired eject",
